# zoresearch

./: Data.json  Digital Tools.json  Jeen.json  Jeeon.json  Madman Theory.json  Masks.json  README.md  Recipes.json  Research.json  SureCool.json  Vaccine Delivery Literature.json  art.json  career.json  cooking.json  dylan.json  ee.json  motorcycles.json  pyproject.toml  setup.cfg  zoresearcher.bat
Scripts/: Researcher.lnk  Source.py  class_test.py  db.py  get_annots.py  gui.py  main.py  notes_app.py  research.py  researcher.bat  sources_db.py  test.py  thread_test.py  threading_example.py  to_do.md  zotero_query.py
shortcuts/: Researcher.lnk  desktop.ini  researcher.bat
src/: start.py
src/zoresearch/: __init__.py  gui.py  main.py  source.py  sources_db.py  test.py
src/zoresearch.egg-info/: PKG-INFO
src/zoresearcher/: __init__.py  get_annots.py  gui.py  main.py  source.py  sources_db.py  test.py
src/zoresearcher.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
zoresearch-0.0.3/: README.md
zoresearch-0.0.4/: pyproject.toml
