[metadata]
name = "zoresearcher"
version = "0.0.2"
authors = [
  { name="Daniel Waldroop", email="dlwaldroop@gmail.com" },
]
description = "Interactive research application built on top of Zotero citation manager"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
include = ["icon/*", "zoresearcher.ico"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dlw-github/zoresearcher"

[options]
packages = find:
zip_safe = True
include_package_data = True

[options.package_data]
"icon": ["*.ico"],